test/TestSuite/Syntax/Errors/report_exists.tjp
project test "Test" "1.0" 2007-11-16 +2m 

task t "T" {
  start ${projectstart}
}

taskreport report "report1" 
# MARK: error 9 report_exists
taskreport report "report2"

